feat: add todo project

--- a/01-fundamentos-reactjs-typescript/src/components/Post.module.css
+++ b/01-fundamentos-reactjs-typescript/src/components/Post.module.css
@@ -97,7 +97,7 @@
 }
 
 .commentForm button[type="submit"] {
-  padding: 1rem 1.5rem;
+  padding: 1rem;
   margin-top: 1rem;
   border-radius: 8px;
   border: 0;
