--- a/desafio-01-praticando-conceitos-reactjs-ts/src/components/Tasks.module.css
+++ b/desafio-01-praticando-conceitos-reactjs-ts/src/components/Tasks.module.css
@@ -2,6 +2,7 @@
 .content {
   display: flex;
   border-radius: 8px;
+  /* overflow: auto; */
 }
 
 .content  + .content  {
@@ -16,6 +17,10 @@
   border-radius: 8px;
   border: 1px solid var(--gray-400);
   padding: 1rem;
+}
+
+.tasks:hover {
+  background: var(--gray-600);
 }
 
 .tasks label {  
@@ -33,8 +38,8 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
   background: transparent;
   border: 2px solid var(--blue);
   content: "";
@@ -65,13 +70,13 @@
 
 .tasks span {      
   color: var(--gray-100);
-  max-width: 632px;
+  /* max-width: 632px; */
   line-height: 19px;
-  text-align: justify;
+  /* text-align: justify; */
   flex: 1;
+  cursor: pointer;
   
 }
-
 
 .content .infoTaskEmpty strong {
   line-height: 22.4px;
